Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98354

Windows 11: State of checkable QAction with icon is not shown

XMLWordPrintable

    • Windows
    • b3ce494bac (qt/qtbase/dev) b3ce494bac (qt/tqtc-qtbase/dev) a11fcb6b25 (qt/qtbase/6.4) fcacda07ad (qt/tqtc-qtbase/6.2) a11fcb6b25 (qt/tqtc-qtbase/6.4.1) a11fcb6b25 (qt/tqtc-qtbase/tqtc/qtinsight-6.4)

      Issue can be reproduced by adding this to Qt Application example :

      openAct->setCheckable(true);
      openAct->setChecked(true);
      
      • Windows 10

      • Windows 11

       Issue probably affects Qt 6, but I haven't tried yet.

        For Gerrit Dashboard: QTBUG-98354
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            tugdwal Tudal LE BOT
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes